# CM-Paludis

./: .gitignore  CMakeLists.txt  README
args/: README.md
binding/python/: README.md
binding/ruby/: README.md
clients/: CMakeLists.txt  README.md
clients/cave/: CMakeLists.txt
cmake/: README.md
cmake/config/: binding.cmake  client.cmake  color.cmake  completion.cmake  component.cmake  distribution.cmake  downstream.cmake  editor.cmake  repositories.cmake
cmake/modules/: PaludisAddLibrary.cmake  README.md
completion/: CMakeLists.txt
completion/bash/: README.md
distributions/: CMakeLists.txt  README.md
distributions/mokleus/: e.conf  repository_blacklist.conf
doc/: README.md
editor/vim/: README.md
environment/: CMakeLists.txt  README.md
fetcher/: README.md
hooks/: README.md
libs/: README.md
pkg-config/: README.md
repositories/: CMakeLists.txt  README.md
repositories/accounts/: README.md
repositories/enoch/: CMakeLists.txt  README.md
repositories/enoch/distributions/: CMakeLists.txt
repositories/enoch/distributions/exherbo/: CMakeLists.txt  README.md
repositories/enoch/distributions/exherbo/eapis/: CMakeLists.txt
repositories/enoch/distributions/exherbo/ebuild/: CMakeLists.txt
repositories/enoch/distributions/exherbo/utils/: CMakeLists.txt
repositories/enoch/distributions/gentoo/eapis/: CMakeFile.txt
repositories/enoch/distributions/gentoo/ebuild/: CMakeFile.txt
repositories/enoch/distributions/mokleus/ebuild/: README.md
repositories/enoch/distributions/paludis/: README.md
repositories/enoch/distributions/paludis/eapis/: CMakeFile.txt
repositories/enoch/distributions/paludis/ebuild/: CMakeFile.txt
repositories/enoch/distributions/paludis/ebuild/paludis-1/: CMakeLists.txt
repositories/enoch/distributions/paludis/ebuild/pbin-1/: CMakeLists.txt
repositories/enoch/ebuild.old/: CMakeLists.txt  README.md
repositories/enoch/ebuild.old/utils/: CMakeLists.txt
repositories/fake/: README.md
repositories/gemcutter/: README.md
repositories/repository/: README.md
repositories/unavailable/: README.md
repositories/unpackaged/: README.md
repositories/unwritten/: README.md
selinux/: README.md
